turtleart.square.Square.scala.error
Compilation error:
Square:1: error: Missing closing brace `}' assumed here
override def run() {
^Square:1: error: expected start of definition
override def run() {
         ^