turtleart.square.Square.scala.code
override def run() {
{
baisseCrayon()
for (k<- 0 to 3)
{
  avance(20)
  droite(90)
}
  }